...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:id="@+id/Detailed_Neighbour"
    android:theme="@style/AppTheme.ActionBar.Transparent"
    tools:context=".ui.neighbour_list.DetailedNeighbourActivity">


    <ImageButton
        android:id="@+id/Favori_Add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:background="@drawable/ic_star_border_white_24dp"
        android:contentDescription="FavoriAddBtn"
...
