<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintLayoutFav"
    tools:context=".ui.neighbour_list.FavoritesFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_neighbours_favorites"
        android:name="com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourFragment"
        android:layout_width="410dp"
        android:layout_height="735dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.neighbour_list.NeighbourFragment"
        tools:listitem="@layout/fragment_neighbour" />
    <!-- TODO: Update blank fragment layout -->

</android.support.constraint.ConstraintLayout>